# see https://peps.python.org/pep-0518/
[project]
name = "npoapi"
version = "8.0.0"
description = "Python Library for connecing to npo apis"
authors = [
    {name = "Michiel Meeuwissen", email = "git@meeuw.org"},
]


dependencies = [
    "ijson==3.2.3",
    "jwt==1.3.1",
    "python-dateutil==2.8.2",
    "pytz==2024.1",
    "requests[socks]==2.32.3",
    "xsdata[cli]==24.2", # TODO upgrading results in Error: Circular Dependencies Found
    "isoduration==20.11.0",
    "lxml==5.2.2",
    "json-stream==2.3.2",
]
requires-python = ">=3.10"
readme = "README.txt"
license = {text = "MIT"}

[project.optional-dependencies]
testing = [
    "pytest==7.4.3",
    "xmldiff==2.6.3",
    "nose==1.3.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]

npo_media_get = "npoapi.bin:media_get"
npo_media_search = "npoapi.bin:media_frontendsearch"
npo_media_iterate = "npoapi.bin:media_iterate"
npo_media_follow_changes = "npoapi.bin:media_follow_changes"
npo_media_changes= "npoapi.bin:media_changes"

npo_pages_get = "npoapi.bin:pages_get"
npo_pages_list = "npoapi.bin:pages_list"

npo_pages_search= "npoapi.bin:pages_search"
npo_pages_iterate= "npoapi.bin:pages_iterate"

npo_schedule_get="npoapi.bin:schedule_get"
npo_schedule_search="npoapi.bin:schedule_search"
npo_check_credentials="npoapi.bin:check_credentials"
npo_mediabackend_get="npoapi.bin:mediabackend_get"
npo_mediabackend="npoapi.bin:mediabackend"
npo_pagesbackend="npoapi.bin:pagesbackend"
npo_thesaurus="npoapi.bin:thesaurus"
npo_subtitles="npoapi.bin:subtitles"
#npo_integration_tests'

 [tool.hatch.metadata]
 allow-direct-references = true
